// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> render component with paragraph 1`] = `
.c0 {
  color: #000000;
  font-family: 'Roboto',sans-serif;
  font-size: 18px;
  font-weight: 400;
  line-height: 1;
}

<span
  class="c0"
  color="secondary.main"
>
  Test
</span>
`;

exports[`<Text /> render component with title 1`] = `
.c0 {
  color: #000000;
  font-family: 'Pattaya';
  font-size: 36px;
  font-weight: 400;
  line-height: 1.5;
}

@media only screen and (min-width:768px) {
  .c0 {
    font-family: 'Pattaya';
    font-size: 72px;
    font-weight: 400;
    line-height: 2;
  }
}

<span
  class="c0"
  color="secondary.main"
>
  Test
</span>
`;
